# Gameboy-Emulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  Memory.h  Registers.h  readme.md
src/: Memory.h  Registers.h  app.cpp  app.h  cpu.cpp  cpu.h  instruction.cpp  instructions.cpp  instructions.h  interrupt.h  joypad.cpp  joypad.h  main.cpp  memory.cpp  ppu.cpp  ppu.h  ppu_mode.h  registers.cpp  sdldisplay.cpp  sdldisplay.h
tests/: instructionsTests.cpp
